<resources>
    <string name="app_name">Android-Email</string>
    <string name="Welcome">Welcome back!</string>
    <string name="LoginSubtitle">Please, login to continue</string>
    <string name="Username">Username</string>
    <string name="SignIn">Sign In</string>
    <string name="CreateAccount">Create New Account</string>
    <string name="SignUp">Sign Up</string>
    <string name="err_UsernameTaken">%s is already taken</string>
    <string name="msg_SingUpSuccessfully">You have singed up as %s</string>
    <string name="msg_SingInSuccessfully">You have singed in as %s</string>
    <string name="err_Unexpected">Unexpected error: %s</string>
    <string name="err_UsernameNotFound">%s is not a user yet</string>
    <string name="AddContact">Add Contact</string>
    <string name="AddContactHint">Introduce the username of the person you want to add</string>
    <string name="err_AlreadyAContact">%s is already one of your contacs</string>
    <string name="msg_ContactAdded">%s added to you contacts</string>
    <string name="Contacts">Contacts</string>
    <string name="LogOut">Logout</string>
    <string name="LogOutMessage">See you later %s</string>
    <string name="MessageHint">Type a message</string>
    <string name="InfoTitle">Chat Info</string>
    <string name="InfoMessage">%s</string>
    <string name="Ok">Ok</string>
    <string name="User">User</string>
    <string name="Contact">Contact</string>
    <string name="RightUser">The right user is: %s</string>
    <string name="LeftUser">The left user is: %s</string>
</resources>