<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="24sp"
    android:scrollbars="none"
    tools:context=".Activities.SignInActivity"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_WelcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/Welcome"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18ssp"/>
        <TextView
            android:id="@+id/LoginSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:textColor="@color/secondary_text"
            android:text="@string/LoginSubtitle"
            android:textSize="@dimen/_12ssp"/>
        <EditText
            android:id="@+id/et_Username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:hint="@string/Username"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textColorHint="#78909C"
            android:textSize="@dimen/_16ssp"/>
        <Button
            android:id="@+id/btn_SignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/SignIn"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"/>
        <TextView
            android:id="@+id/tv_CreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/CreateAccount"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp"/>
    </LinearLayout>
</ScrollView>